fix(projects): added enctype attribute for uploaded files in model_form.html

--- a/devshub_project/projects/templates/projects/project_form.html
+++ b/devshub_project/projects/templates/projects/project_form.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="max-w-1/2 w-full mx-auto font-medium">
-        {% include "includes/model_form.html" with form=form %}
+        {% include "includes/model_form.html" with form=form has_file_field=True %}
       </div>
 
   </div>
