refactor: change title.html markup
- display title instead of hardcoded text in title.html
- update confirm_delete, form and list templates

--- a/devshub_project/cards/templates/cards/card_confirm_delete.html
+++ b/devshub_project/cards/templates/cards/card_confirm_delete.html
@@ -7,7 +7,7 @@
     <div class="container mx-auto px-4 flex flex-col">
 
       <div class="mb-8">
-        {% include "includes/title.html" with card=card %}
+        {% include "includes/title.html" with title="Вы собиратесь удалить карточку" card=card %}
       </div>
 
       <div>
