--- a/devshub_project/decks/templates/decks/deck_confirm_delete.html
+++ b/devshub_project/decks/templates/decks/deck_confirm_delete.html
@@ -8,7 +8,7 @@
     <div class="container mx-auto px-4 flex flex-col">
 
       <div class="mb-8">
-        {% include "includes/title.html" with deck=deck %}
+        {% include "includes/title.html" with title="Вы собиратесь удалить колоду" deck=deck %}
       </div>
 
       <div>
