--- a/devshub_project/decks/templates/decks/deck_form.html
+++ b/devshub_project/decks/templates/decks/deck_form.html
@@ -16,7 +16,7 @@
         {% if not form.instance.pk %}
           {% include "includes/title.html" with title="Создать колоду" %}
         {% else %}
-          {% include "includes/title.html" with title="Редактировать колоду" %}
+          {% include "includes/title.html" with title="Редактировать колоду" deck=form.instance %}
         {% endif %}
       </div>
 
