--- a/devshub_project/decks/templates/decks/deck_list.html
+++ b/devshub_project/decks/templates/decks/deck_list.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Список наборов карточек{% endblock title %}
+{% block title %}Список колод{% endblock title %}
 
 {% block content %}
   <div class="flex flex-col flex-1 py-8">
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Колоды" %}
+        {% include "includes/title.html" with title="Список колод" %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
