--- a/devshub_project/projects/templates/projects/project_list.html
+++ b/devshub_project/projects/templates/projects/project_list.html
@@ -7,7 +7,7 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Проекты" %}
+        {% include "includes/title.html" with title="Список проектов" %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
