--- a/devshub_project/templates/includes/title.html
+++ b/devshub_project/templates/includes/title.html
@@ -1,10 +1,10 @@
 <h1 class="text-2xl font-semibold text-center">
   {% if card %}
-    Вы уверены, что хотите удалить карточку "{{ card.question|truncatechars:30 }}" ?
+    {{ title }} "{{ card.question|truncatechars:30 }}"
   {% elif deck %}
-    Вы уверены, что хотите удалить колоду "{{ deck.title|truncatechars:30 }}" ?
+    {{ title }} "{{ deck.title|truncatechars:30 }}"
   {% elif project %}
-    Вы уверены, что хотите удалить проект "{{ project.title|truncatechars:30 }}" ?
+    {{ title }} "{{ project.title|truncatechars:30 }}"
   {% else %}
     {{ title }}
   {% endif %}
