--- a/devshub_project/users/templates/users/user_list.html
+++ b/devshub_project/users/templates/users/user_list.html
@@ -8,7 +8,7 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       <div class="mb-8">
-        {% include "includes/title.html" with title="Пользователи" %}
+        {% include "includes/title.html" with title="Список пользователей" %}
       </div>
 
       <div class="max-w-1/2 w-full mx-auto mb-8">
