style(decks): add style and markup for deck_detail.html
- added markup and styles for deck_detail
- added key success in deck_toggle_study response
- added notification div to base.html
- changeed toggle_form_state.js to display notification
- add pagination for cards in deck_detail
- prevent user frome save decks created by himself

--- a/devshub_project/static/src/input.css
+++ b/devshub_project/static/src/input.css
@@ -6,7 +6,42 @@
     content: " *";
     color: #ef4444;
   }
+
   .errorlist {
     color: #ce3c3c;
   }
+
+  .primary {
+    background-color: var(--color-blue-50);
+    color: var(--color-blue-700);
+    border-color: var(--color-blue-300);
+    &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-blue-100);
+      }
+    }
+  }
+
+  .danger {
+    background-color: var(--color-red-50);
+    color: var(--color-red-700);
+    border-color: var(--color-red-300);
+    &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-red-100);
+      }
+    }
+  }
+
+  .success {
+    background-color: var(--color-green-50);
+    color: var(--color-green-700);
+    border-color: var(--color-green-300);
+    &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-green-100);
+      }
+    }
+  }
+
 }
