--- a/devshub_project/decks/templates/decks/deck_detail.html
+++ b/devshub_project/decks/templates/decks/deck_detail.html
@@ -3,47 +3,51 @@
 {% load card_tags %}
 
 
-{% block title %}{{ deck.title }}{% endblock title %}
+{% block title %}
+  {{ deck.title }}
+{% endblock title %}
 
 {% block content %}
+  <div class="flex flex-col flex-1 py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1">
 
-  <h1>{{ deck.title }}</h1>
+      <div class="mb-8">
+        {% include "includes/title.html" with title="Список карточек" %}
+      </div>
 
-  <div>
-    <ul>
-      {% for card in cards %}
-        <li>
-          {% render_card card=card user=request.user %}
-        </li>
-      {% empty %}
-        <li>
-          Карточек нету
-        </li>
-      {% endfor %}
-    </ul>
+      <div class="max-w-1/2 w-full mx-auto mb-8">
+        {% include "includes/search_form.html" with placeholder="Что такое итератор?" %}
+      </div>
+
+      <div class="mb-6">
+        {% if not deck.author == request.user %}
+          <form action="{% url "deck_toggle_save" deck.id %}" method="post" data-js-toggle-save-form>
+            {% csrf_token %}
+            {% if not is_saved %}
+              <button type="submit" data-js-toggle-button class="w-full rounded-full py-4 px-6 text-md font-medium primary transition-colors cursor-pointer">
+                Сохранить в мой профиль
+              </button>
+            {% else %}
+              <button type="submit" data-js-toggle-button class="w-full rounded-full py-4 px-6 text-md font-medium danger transition-colors cursor-pointer">
+                Удалить из моего профиля
+              </button>
+            {% endif %}
+          </form>
+        {% else %}
+          <span class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium text-green-700 bg-green-100 border-green-300">Вы автор этой колоды</span>
+        {% endif %}
+      </div>
+
+      <div class="mb-auto">
+        {% include "includes/card_list.html" with cards=cards user=request.user %}
+      </div>
+
+      <div class="pt-8">
+        {% include "includes/pagination.html" with page_obj=cards %}
+      </div>
+
   </div>
-
-  <div>
-    {% if not deck.author == request.user %}
-      <form action="{% url "deck_toggle_save" deck.id %}" method="post" data-js-toggle-save-form>
-        {% csrf_token %}
-        <button type="submit" data-js-toggle-button>
-          {% if not is_saved %}
-            Сохранить в мой профиль
-          {% else %}
-            Удалить из моего профиля
-          {% endif %}
-        </button>
-      </form>
-      {% else %}
-        <p>Вы автор этого набора</p>
-      {% endif %}
-  </div>
-
-  <div>
-    <p>Дата создания: <span>{{ deck.created_at }}</span></p>
-    <p>Последнее обновление: <span>{{ deck.updated_at }}</span></p>
-  </div>
+</div>
 
 {% endblock content %}
 
