--- a/devshub_project/templates/base.html
+++ b/devshub_project/templates/base.html
@@ -17,9 +17,9 @@
 
   {% include "footer.html" %}
 
+  <div id="notifications" class="fixed bottom-4 right-4 z-50 space-y-2"></div>
 
   <script src="{% static "js/js.cookie.min.js" %}"></script>
-
   {% block scripts %}
   {% endblock scripts %}
 </body>
