refactor: change cardset titles to decks, fix padding for includes, format project/forms.py by pep8

--- a/devshub_project/users/templates/users/user_decks.html
+++ b/devshub_project/users/templates/users/user_decks.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-  {% if is_owner %}Мои наборы карточек{% else %}Наборы карточек {{ user.username }}{% endif %}
+  {% if is_owner %}Мои колоды{% else %}Колоды {{ user.username }}{% endif %}
 {% endblock title %}
 
 {% block content %}
