--- a/devshub_project/cards/templates/cards/card_detail.html
+++ b/devshub_project/cards/templates/cards/card_detail.html
@@ -25,7 +25,7 @@
         </button>
       </form>
     {% else %}
-      <p>Вы автор этой карточки</p>
+      <p>Вы автор этой колоды</p>
     {% endif %}
   </div>
 
