--- a/devshub_project/static/css/main.css
+++ b/devshub_project/static/css/main.css
@@ -504,6 +504,9 @@
   .object-center {
     object-position: center;
   }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
