--- a/devshub_project/projects/templates/components/project.html
+++ b/devshub_project/projects/templates/components/project.html
@@ -44,7 +44,7 @@
     {% endif %}
   </div>
 
-  <div class="flex-1">
+  <div class="flex-1 text-right">
     <a href="{{ project.author.get_absolute_url }}" class="hover:text-blue-600 transition-colors">
       {{ project.author.username }}
     </a>
