--- a/devshub_project/templates/includes/project_list.html
+++ b/devshub_project/templates/includes/project_list.html
@@ -5,7 +5,7 @@
   <p class="flex-2">Название</p>
   <p class="flex-1">Репозиторий</p>
   <p class="flex-1">URL</p>
-  <p class="flex-1">Автор</p>
+  <p class="flex-1 text-right">Автор</p>
 </div>
 <ul class="divide-y divide-gray-300">
   {% for project in projects %}
