--- a/devshub_project/templates/includes/user_list.html
+++ b/devshub_project/templates/includes/user_list.html
@@ -5,7 +5,7 @@
   <p class="flex-1">Имя</p>
   <p class="flex-1">Направление</p>
   <p class="flex-1">Навыки</p>
-  <p class="flex-1">Профиль codewars</p>
+  <p class="flex-1 text-right">Профиль codewars</p>
 </div>
 <ul class="divide-y divide-gray-300">
   {% for user in users %}
