--- a/devshub_project/users/templates/components/user.html
+++ b/devshub_project/users/templates/components/user.html
@@ -41,7 +41,7 @@
     {% endif %}
   </div>
 
-  <div class="flex-1">
+  <div class="flex-1 text-right">
     {% if user.codewars_username %}
       <a href="https://www.codewars.com/users/{{user.codewars_username}}" target="_blank" class="hover:text-blue-600 transition-colors">
         {{ user.codewars_username }}
