--- a/devshub_project/templates/includes/card_list.html
+++ b/devshub_project/templates/includes/card_list.html
@@ -2,8 +2,8 @@
 
 <div class="flex gap-4 py-2 px-4 text-gray-500">
   <p class="flex-2">Вопрос</p>
-  <p class="flex-1">Автор</p>
-  <p class="flex-1 text-right">Статус</p>
+  <p class="flex-1 pl-4">Автор</p>
+  <p class="flex-1 text-right pr-4">Статус</p>
 </div>
 <ul class="divide-y divide-gray-300">
   {% for card in cards %}
