feat(tinyMCE): add tinyMCE editor to model_form.html
- added striptags filter for card question title in templates
- resized deck_form

--- a/devshub_project/cards/templates/components/card.html
+++ b/devshub_project/cards/templates/components/card.html
@@ -2,7 +2,7 @@
 
   <div class="flex-2">
     <a href="{{ card.get_absolute_url }}" class="hover:text-blue-600 transition-colors">
-      {{ card.question|truncatechars:76 }}
+      {{ card.question|truncatechars:76|striptags }}
     </a>
   </div>
 
