--- a/devshub_project/decks/templates/decks/deck_form.html
+++ b/devshub_project/decks/templates/decks/deck_form.html
@@ -43,11 +43,11 @@
           <div>
             {{ form.cards.label_tag }}
 
-            <select name="{{ form.cards.name }}" id="{{ form.cards.id_for_label }}" multiple class="w-full border-gray-300 rounded-md shadow min-h-64 resize-y">
+            <select name="{{ form.cards.name }}" id="{{ form.cards.id_for_label }}" multiple class="w-full border-gray-300 rounded-md shadow min-h-96 resize-y">
               <option value="" disabled>Выберите карточки</option>
               {% for value, label in form.cards.field.choices %}
                 <option value="{{ value }}" {% if value in form.cards.value %}selected{% endif %} class="hover:bg-gray-100 py-1 hover:text-blue-600 font-medium">
-                  {{ label|truncatechars:80 }}
+                  {{ label|truncatechars:80|striptags }}
                 </option>
               {% endfor %}
             </select>
