--- a/devshub_project/static/src/input.css
+++ b/devshub_project/static/src/input.css
@@ -56,4 +56,13 @@
       }
     }
   }
+
+  .inactive {
+    background-color: var(--color-gray-100);
+    color: var(--color-gray-400);
+    border-color: var(--color-gray-200);
+    cursor: not-allowed;
+    opacity: 1;
+    pointer-events: none;
+  }
 }
