--- a/devshub_project/templates/includes/title.html
+++ b/devshub_project/templates/includes/title.html
@@ -1,6 +1,6 @@
 <h1 class="text-2xl font-semibold text-center">
   {% if card %}
-    {{ title }} "{{ card.question|truncatechars:30 }}"
+    {{ title }} "{{ card.question|truncatechars:30|striptags }}"
   {% elif deck %}
     {{ title }} "{{ deck.title|truncatechars:30 }}"
   {% elif project %}
