chore(slider): add swiper js library to project

--- a/devshub_project/static/src/input.css
+++ b/devshub_project/static/src/input.css
@@ -45,7 +45,7 @@
     }
   }
 
-  .orange {
+  .warning {
   background-color: var(--color-orange-50);
   color: var(--color-orange-700);
   border-color: var(--color-orange-300);
